# Telecom-RAG-Bot

./: .gitignore  CLAUDE.md  MILESTONES.md  README.md
backend/: pyproject.toml
backend/app/: ingest.py  main.py  rag_chain.py
backend/app/loaders/: csv_loader.py  pdf_loader.py  sqlite_loader.py
backend/scripts/: eval_retrieval.py  test_chain.py  test_ingest.py  test_loaders.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
